--- a/Changes
+++ b/Changes
@@ -7,6 +7,7 @@
     - Die if any of the remaining unimplemented callbacks are invoked:
       comment(), elementDecl(), getParameterEntity(), hasExternalSubset(),
       hasInternalSubset(), ignorableWhitespace(), unparsedEntityDecl()
+    - Move performance improvements
 0.5.12 2020-12-19
     - Various performance improvments #49
 0.5.11 2020-11-18
