--- a/Changes
+++ b/Changes
@@ -1,3 +1,5 @@
+0.5.14 2020-12-27
+    - Fix circa Rakudo 2019.11 04node.t regression #50
 0.5.13 2020-12-23
     - Fix return type of xmlSAXLocation getPublicId and getSystemId methods
     - Fix LibXML::SAX::Builder entityDecl() method
