remove just added root() method
duplicate of existing getOwner() method

--- a/Changes
+++ b/Changes
@@ -1,5 +1,5 @@
 0.5.15
-    - Add $node.root() method
+    - tba
 0.5.14 2020-12-27
     - Fix circa Rakudo 2019.11 04node.t regression #50
 0.5.13 2020-12-23
