replace references to <XML::Grammar::pident> with <XML::Grammar::name>
<pident> is obselete in latest XML version, and this seems more correct
anyway. Fixes #52

--- a/Changes
+++ b/Changes
@@ -2,6 +2,10 @@
     - Exported disused and bit rotted etc/libxml2-api.xml, etc/LibXML and
       etc/generator.raku to https://github.com/libxml-raku/LibXML-Raw-Gen-raku
       #51
+    - Fix for dependency on latest XML #52. Replace references to
+      <XML::Grammar::pident>, which (rightfully) no longer exists, with
+      <XML::Grammar::name>. Detect namespaces after parsing.
+
 0.5.14 2020-12-27
     - Fix circa Rakudo 2019.11 04node.t regression #50
 0.5.13 2020-12-23
