--- a/Changes
+++ b/Changes
@@ -16,7 +16,7 @@
       -- Add  LibXML::Dtd elements() method
     - Fixed memory leaks in $doc.setDocumentElement and document parse failure #55
     - Fixed segfault in unlinking DtD #56
-    - Fixed valgrind errors in t/07dtd.t. Specifically, $dtd.replaceChild($dtd),, which
+    - Fixed valgrind errors in t/07dtd.t. Specifically, $dtd.replaceChild($dtd), which
       should be a no-op.
 
 0.6.0  2021-05-29T09:37:12+12:00
