--- a/Changes
+++ b/Changes
@@ -1,4 +1,5 @@
 {{$NEXT}}
+    - Fixed performance problem in reference checking #58
     - Refactor document Str and Buf method. :skip-dtd option 
       now copies the document before mutating.
 0.6.2  2021-06-16T13:57:49+12:00
