--- a/Changes
+++ b/Changes
@@ -1,4 +1,6 @@
 {{$NEXT}}
+    - Add associative methods to LibXML::Dtd::ElementDecl, including keys(),
+      values(), pairs(), AT-KEY)() and Hash
 
 0.6.3  2021-06-17T11:25:31+12:00
     - Fixed t/02parser.t segfault on Rakudo 2020.05.1 introduced in 0.6.1 #59
