--- a/Changes
+++ b/Changes
@@ -1,4 +1,6 @@
 {{$NEXT}}
+    - Introduce locks into the setup and finalization stages of the
+      LibXML::Parser::Context try() method.
     - Add maximum error limit of 100 #61. Configurable via XML::Config.max-errors().
     - Fix LibXML::Text role to W3C::DOM::Text
     - Factor tests into subtests. Remove most 'TODO' test descriptions.
