--- a/Changes
+++ b/Changes
@@ -2,9 +2,9 @@
 
 0.6.6  2021-08-23T13:10:48+12:00
     - Complete porting of t/90threads.t from Perl. This involved adding:
-      - protection locks in setup and finalization stages in
-        parsing and validation contexts.
-      - protection locks to push parser methods in LibXML:Parser
+      -- protection locks in setup and finalization stages in
+         parsing and validation contexts.
+      -- protection locks to push parser methods in LibXML:Parser
     - Add maximum error limit of 100 #61. Configurable via XML::Config.max-errors().
     - Fix LibXML::Text role to W3C::DOM::Text
     - Factor tests into subtests. Remove most 'TODO' test descriptions.
