build doco and tweaks

--- a/Changes
+++ b/Changes
@@ -1,5 +1,7 @@
 {{$NEXT}}
     - Add LibXML::_Validator role. Performed by LibXML::{Dtd|Schema|RelaxNG}
+    - Added windows support. This module pre-builds the binding library
+      (xml6) and installs a copy of libxml.dll.
 
 0.6.10  2021-10-30T06:00:36+13:00
     - Fix LibXML::Parser options setup and etc/benchmark.raku core-dump #64
