--- a/Changes
+++ b/Changes
@@ -1,4 +1,5 @@
 {{$NEXT}}
+    - Replace LibXML::HashMap::Maker with LibXML::HashMap::NodeSet.
 
 0.6.14  2022-04-07T14:39:40+12:00
     - Fixed thread safety issues in catalog and class loading - vrurg++
