further memory leak reductions #78

--- a/Changes
+++ b/Changes
@@ -1,4 +1,8 @@
 {{$NEXT}}
+   - Remove memory leaks
+     -- Fix anyNode Str() method leak, by basing it on $node.Blob #77
+     -- Add LibXML::Raw AllocedStr class for pointers to strings that need to be freed #78
+     -- Add xml6_gbl_cache() to mimimise leaks on repetitive data (e.g. tag-names) #78
 
 0.7.7  2022-06-13T10:47:07+12:00
    - Update prebuilt xml6.dll on Windows
