--- a/Changes
+++ b/Changes
@@ -3,8 +3,7 @@
 0.7.10  2022-06-28T07:33:30+12:00
    - Fix error handling in SAX callbacks. These are now trapped by
      LibXML::ErrorHandler. Note that exceptions in SAX callbacks now
-     halt parsing unless `recover` has been set; in which case an
-     uncaught exception in a function returns false.
+     halt parsing unless `recover` has been set.
    - Also fix error handling in XPath evaluations. Exceptions were
      incidentally failing by causing stack errors (1223).
    - Define some newly added XPath error codes in LibXML::Enums,
