serialize XHTML via xml6_node_to_buf()
This uses the more modern xmlSaveTree() and side-steps issue #90

--- a/Changes
+++ b/Changes
@@ -1,4 +1,6 @@
 {{$NEXT}}
+   - Deprecate HTML serialization via htmlDoc.dump() method in
+     favour of xml6_node_to_buf() with XML_SAVE_XHTML option #90
 
 0.9.3  2023-01-15T06:20:09+13:00
    - Add :%attribs argument to startElementNs() SAX handler
