--- a/Changes
+++ b/Changes
@@ -5,15 +5,15 @@
      However, LibXML::Config.parser-locking now defaults to True on
      Windows due to unresolved failures in 90threads.t
    - Regress against latest libxml2 blead.
-     -- some changes to limits were needed in 35huge_mode.t
+     -- there are some changes in limits that impact 35huge_mode.t
         and 60err_prev_chain.t
      -- xmlElem struct size has changed! Affected tail members of the
         struct have been made private and t/00native.t has been fixed.
    - Build.pm6 -I <include-path> now works on non-Windows platforms
    - Add LibXML::Config.have-iconv method to detect if libxml was built
      with the inconv library for Unicode encoding and decoding
-   - Fix some tests to skip for specific reasons; that the library was
-     built without iconv or compression, rather than we're running
+   - Fix some tests to skip for the right reasons; that the library
+     was built without iconv or compression, rather than we're running
      under Windows.
 
 0.9.8  2023-02-08T09:09:26+13:00
