Deprecate LibXML::Document.input-compressed

--- a/Changes
+++ b/Changes
@@ -1,4 +1,14 @@
 {{$NEXT}}
+   - Deprecate LibXML::Document input-compressed() which has proven to
+     be inconsistent across libxml2 versions and platforms.
+   - Fix initialization in Lib:XML::ErrorHandling.set-error-handling()
+   - Rework DocumentFragment balanced chunk parsing for news libxml
+     2.14+ implementation. Remove deprecated xmlKeepBlanksGlobal from
+     xml6 bindings.
+   - Fix some libxml2.14 test regressions.
+   - Fix xmlBufCreate() to pass 'size' argument.
+   - Break LibXML::DocumentFragment parse() method into multis; making
+     it consistent with LibXML::Parser
 
 0.10.9  2024-06-02T11:28:45+12:00
    - Deprecation of xmlLastError() global variable #111
