--- a/Changes
+++ b/Changes
@@ -4,6 +4,8 @@
    - Fix Dtd IO error handling by promoting some libxml2 warnings to errors.
    - Create t/META6.json for test suite modules and rename test modules
      from *.pm6 to *.rakumod
+   - Remove internal class LibXML::HashMap::NodeSet, which is equivalent
+     to LibXML::HashMap.^parameterize(LibXML::Node::Set)
 
 0.10.11  2024-11-05T09:21:51+13:00
    - Disable local error handling for libxml2 2.13 Dtd parsing. Waiting
